hphp/hack/test/sound_dynamic/typing/test_coerce.bad.php.exp
File "test_coerce.bad.php", line 6, characters 17-17:
Invalid argument (Typing[4110])
  File "test_coerce.bad.php", line 3, characters 24-30:
  Expected `dynamic`
  File "test_coerce.bad.php", line 6, characters 17-17:
  But got `int`
File "test_coerce.bad.php", line 8, characters 10-10:
Invalid return type (Typing[4110])
  File "test_coerce.bad.php", line 5, characters 27-33:
  Expected `dynamic`
  File "test_coerce.bad.php", line 8, characters 10-10:
  But got `int`
