hphp/hack/test/sound_dynamic/typing/test_coerce.bad.php
<?hh

function expectDynamic(dynamic $d): void {}

function returnDynamic(): dynamic {
  expectDynamic(1); // error

  return 1; // error
}
